# holochain-challenge-1

./: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
dnas/jokes/workdir/: dna.yaml
dnas/jokes/zomes/coordinator/jokes/: Cargo.toml
dnas/jokes/zomes/coordinator/jokes/src/: joke.rs  lib.rs
dnas/jokes/zomes/integrity/jokes/: Cargo.toml
dnas/jokes/zomes/integrity/jokes/src/: joke.rs  lib.rs
tests/src/jokes/jokes/: common.ts  joke.test.ts
ui/: index.html  package.json
ui/src/: App.svelte
ui/src/jokes/jokes/: CreateJoke.svelte  EditJoke.svelte  JokeDetail.svelte  types.ts
workdir/: happ.yaml  web-happ.yaml
