[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.5.0"
hdk = "=0.4.0"
serde = "1.0"

[workspace.dependencies.jokes]
path = "dnas/jokes/zomes/coordinator/jokes"

[workspace.dependencies.jokes_integrity]
path = "dnas/jokes/zomes/integrity/jokes"
